--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,12 +33,13 @@
             </div>
             <br />
             <br />
+            <center id="val"  style="display: none;"><p style="color: red">Please refer to Note and choose valid date </p><br></center>
             <center id="tbtn" style="display: none;"><button class="btn btn-primary">Click to Get Tweets</button></center>
             <div class="col-12 mt-4">
                 <div class="card-body" style="background-color: aliceblue;">
                     <center>
                         <h5 class="card-field card-title" style="font-weight: 700;"><i class="fa fa-book"></i> Note</h5>
-                        <p class="card-text">Do not choose dates before than 5th March 2021</p>
+                        <p class="card-text">Do not choose dates before than 5th March 2021. 5th March 2021 this date can be choosen</p>
                         <p class="card-text" id="dyn"></p>
                         <p class="card-text">All Tweets of each day is added everyday at 00:00 UTC</p>
 
