update date confusion

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,10 +39,11 @@
                 <div class="card-body" style="background-color: aliceblue;">
                     <center>
                         <h5 class="card-field card-title" style="font-weight: 700;"><i class="fa fa-book"></i> Note</h5>
-                        <p class="card-text">Do not choose dates before than 5th March 2021. 5th March 2021 this date can be choosen</p>
+                        <p class="card-text">Do not choose dates before than 5th March 2021 (UTC). 5th March 2021 (UTC) this date can be choosen</p>
                         <p class="card-text" id="dyn"></p>
                         <p class="card-text">All Tweets of each day is added everyday at 00:00 UTC</p>
-
+                         <br/>
+                        <p class="card-text" style="font-style:italic" id="utc"></p>
                         <br />
                         <br />
                     </center>
